--- a/tp1/cv.css
+++ b/tp1/cv.css
@@ -1,9 +1,7 @@
-body {
-    background: #bdc3c7;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-    
+
+body { 
+    background: url(logos/pexels.jpg) ; 
+    background-size: cover;   
     font-size: 16px;
     margin: 0 auto;
     max-width: 800px;
@@ -12,16 +10,26 @@ body {
 
 table{
     background-color: white;
-    opacity: 0.6;
+    opacity: 0.7;
+    border: 2px solid transparent;
+    border-radius: 5px;
 }
 td{
     padding: 8px;
     border-bottom: 1px solid #ddd;
 }
 
+tr:hover {background-color: #f5f5f5;}
+
 .cvtitle{
     text-align: center;
     color: white;
+}
+.pagetitle{
+    text-align: center;
+}
+h2{
+    color: lightseagreen;
 }
 
 .img_size{
@@ -31,3 +39,8 @@ td{
     margin-left: auto;
     margin-right: auto;
 }
+
+a:link, a:visited {
+    text-decoration: none;
+  }
+  
