--- a/tp1/style.css
+++ b/tp1/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color :gray;
+    background-color :wite;
 	color :black ;
 	font-family: Comic Sans MS, Arial, sans-serif; 
 }
