--- a/tp1/style.css
+++ b/tp1/style.css
@@ -88,7 +88,7 @@ td.interet {
 }
 
 
-#right {
+/*#right {
     margin-right : 90px;
     flex: 2;
     position: relative;
@@ -100,7 +100,7 @@ td.interet {
     color: black;
     font-size: 0.9em;
 }
-
+*/
 #left {
     margin-left: 90px;
     margin-right: 40px;
@@ -108,7 +108,7 @@ td.interet {
 }
 
 #corps {
-	background-color :rgb(188,122,122);
+	background-color :whitesmoke;
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 10px;
     padding: 10px;
