--- a/tp2/style.css
+++ b/tp2/style.css
@@ -1,81 +1,68 @@
-h1{
-    font-size: 30px;
+html{
+    height: 100%;
+}    
+body{
+    background: url(background.jpg) ;
+    background-size: cover;              
+    font-family: "Georgia","Times New Roman", Times, serif, "Helvetica Neue";
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;             
 }
-    body{
-        background-color: gray;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
-    }
-    
-    form {
-        background-color:#FAFAFA;
-       
-        margin:30px 50px 30px 30px ;  
-    
-    }
-        
-    
-    input[type=text] {
-        width: 50%;
-        padding: 10px;
-       
-      }
-      
-    input[type=button] {
-    
-        cursor: pointer;
-    }
-    #error{
-        color: white;
-        font-size: 20px;
-        border: 1px solid black; 
-        background-color:palevioletred;
-        padding : 5px;
-       /* display : none;*/
-    }
-    
-    #resultat{
-      color: white;
-        font-size: 20px;
-        border: 1px solid black; 
-        background-color:green;
-        padding : 5px;
-        /*display : none;*/
-    }
-    
-    
-    #Nom {
-        margin-left : 185px;
-        }
-    
-    #Prénom {
-        margin-left : 145px;
-    }
-    
-    #Adresse {
-        margin-left : 140px;
-    }
-    
-   
-    #Mail {
-        margin-left: 195px;
-    }
-    
-    #valider {
-         margin-left: 255px;
-    
-    }
-    #Date {
-        width: 50%;
-        padding: 10px;
-        margin-left: 0px;
-    }
 
+.formBox{
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    opacity: 0.95;
+    border: 2px solid transparent;
+    padding: 20px;
+    width: 70%;
+  }
 
-      .invisible {
-        display: none;
-    }
-    
-    .visible {
-        display: block;
-    }
+label{
+    width: 100px;
+}
+
+.person{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+.btn{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    background-color: green;
+    color: white;
+  }
+
+#error{
+    background-color: pink;
+    padding: 5px;
+    border: 1px solid transparent;;
+    color: black;
+    display : none;
+}
+
+#resultat{
+    background-color: green;
+    padding: 5px;
+    border: 1px solid transparent;
+    color: white;
+    display : none;
+}
+
+.display{
+    display : block !important;
+  }
